--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,10 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# Log files
 ui-debug.log
-firebase-debug.log
+firestore-debug.log
+*.log
+
+# Emulator data
+/emulators-data
