Select vote in election

--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,8 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "dist",
+    "site": "meetupvote",
+    "public": "dist/meetup-vote/browser/",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
