--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "emulators": "firebase emulators:start --import emulators-data --export-on-exit emulators-data"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "emulators": "firebase emulators:start --import emulators-data --export-on-exit emulators-data",
+    "deploy": "npm run build && firebase deploy"
   },
   "private": true,
   "dependencies": {
